<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/login_activity_vertical_margin"
    android:paddingLeft="@dimen/login_activity_horizontal_margin"
    android:paddingRight="@dimen/login_activity_horizontal_margin"
    android:paddingTop="@dimen/login_activity_vertical_margin"
    android:background="@color/purple"
    tools:context="org.odk.collect.android.activities.LoginActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/dreams_logo"/>

        <TextView
            style="@style/text_view_style"
            android:paddingTop="30dp"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:text="@string/sign_in"/>

        <EditText
            style="@style/editText_style"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:inputType="text"/>

        <EditText
            style="@style/editText_style"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            style="@style/login_button_style"
            android:text="@string/text_login"/>

        <TextView
            style="@style/text_view_style"
            android:text="@string/forgot_your_password"
            android:autoLink="web"/>
    </LinearLayout>

</RelativeLayout>
