<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.odk.collect.android.activities.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dreams_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:scaleType="fitCenter"
            android:padding="@dimen/registration_logo_padding"
            android:src="@drawable/dreams_logo_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/registration_edit_text" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/registration_edit_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_address"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/email_address"
                    android:ems="10"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/registration_edit_text" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:ems="10"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:inputType="textPassword"
                    android:background="@drawable/registration_edit_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/date_of_birth"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/date_of_birth"
                    android:inputType="date"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/registration_edit_text" />

                <EditText
                    android:id="@+id/dreams_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/dreams_id"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/registration_edit_text" />
            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#fff"
                style="@style/login_button_style"/>

            <TextView
                android:id="@+id/register_status_text"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:padding="@dimen/registration_text_padding"
                android:layout_height="wrap_content"
                android:text="@string/registration_text"
                />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
